gccida/g1/oprs_unchanged_p
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/oprs_unchanged_p/src/gcse.c:1852:7: error: use of undeclared identifier 'reg_avail_info_0'; did you mean 'reg_avail_info'?
v6 = &reg_avail_info_0[x->fld[0].rtuint]; 
      ^~~~~~~~~~~~~~~~
      reg_avail_info
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/oprs_unchanged_p/src/gcse.c:1300:31: note: 'reg_avail_info' declared here
static struct reg_avail_info *reg_avail_info;
                              ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/oprs_unchanged_p/src/gcse.c:1857:37: error: use of undeclared identifier 'uid_cuid_1'
return v6->last_set < *( ( _DWORD *)uid_cuid_1 + insn->fld[0].rtint); 
                                    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/oprs_unchanged_p/src/gcse.c:1859:39: error: use of undeclared identifier 'uid_cuid_1'
return v6->first_set >= *( ( _DWORD *)uid_cuid_1 + insn->fld[0].rtint); 
                                      ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/oprs_unchanged_p/src/gcse.c:1865:15: error: use of undeclared identifier 'uid_cuid_1'
*( ( _DWORD *)uid_cuid_1 + insn->fld[0].rtint), 
              ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/oprs_unchanged_p/src/obj/gcse.o] Error 1
